# rosify

./: rosify
ros-package-boilerplates/package_name/: CMakeLists.txt  package.xml
ros-package-boilerplates/package_name/include/package_name/: package_name.hpp
ros-package-boilerplates/package_name/src/: package_name.cpp  package_name_node.cpp
scripts/: rename_folders_and_files.py  replace_text.py
